--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container footer-content">
         <div class="row">
             <div class="col-xs-12 col-sm-3">
-                <%= link_to image_tag("logo.png", alt: "logo", class: "img-responsive img-logo"), "#" %>
+                <%= link_to image_tag("new_logo.png", alt: "logo", class: "img-responsive img-logo resize-logo"), root_path %>
                 <p><i><%= t "about_tripbricks" %></i></p>
 
             </div>
