--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <%= link_to image_tag("logo.png", alt: "logo", class: "img-responsive pull-left img-logo logo-web"), root_path %>
+                <%= link_to image_tag("new_logo.png", alt: "logo", class: "img-responsive pull-left img-logo logo-web resize-logo"), root_path %>
             </div>
             <div class="collapse navbar-collapse navbar" id="navbar-collapse-3">
                 <ul class="nav navbar-nav navbar-left">
