--- a/app/views/schedule_items/_schedule_item.html.erb
+++ b/app/views/schedule_items/_schedule_item.html.erb
@@ -1,5 +1,5 @@
 <!--<div class="row">-->
-    <div class="col-sm-8 mx-auto" id="item-<%= schedule_item.id %>">
+    <div id="item-<%= schedule_item.id %>">
         <!-- List group-->
         <ul class="list-group shadow">
             <!-- list group item-->
@@ -7,7 +7,7 @@
                 <!-- Custom content-->
                 <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                     <div class="media-body order-2 order-lg-1">
-                        <h4 class="mt-0 font-weight-bold mb-2"><strong><%= schedule_item.category_name %></strong></h4>
+                        <h4 class="mt-0 font-weight-bold mb-2"><strong><%= schedule_item.category.name %></strong></h4>
                         <p class="font-italic text-muted mb-0 small"><%= schedule_item.description %></p>
                         <div class="d-flex align-items-center justify-content-between mt-1">
                             <h6 class="font-weight-bold my-2">Timeline: <%= date_string_for schedule_item.start_time %> - <%= date_string_for schedule_item.end_time %></h6>
@@ -22,9 +22,10 @@
                     <% if schedule_item.schedule_item_image %>
                     </div><img src=<%= schedule_item.schedule_item_image.link %> alt="Generic placeholder image" width="180" class="ml-lg-5 order-1 order-lg-2">
                     <% end %>
+                    <%= link_to t("button.search_service"), service_categories_path(schedule_item.category.id),:style=> "float:right;" %>
                     <br></br>
                     <i class="fas fa-edit"></i> <%= t "button.edit" %>
-        			<%= link_to user_schedule_schedule_item_path(@user.id, @schedule.id, schedule_item.id), method: :delete,
+        			<%= link_to user_schedule_schedule_item_path(current_user.id, @schedule.id, schedule_item.id), method: :delete,
                      data: { confirm: t("dialog.delete_schedule_item_confirm"),remote: true }, style: "float: right;" do %>
                     <i class="fas fa-trash-alt"></i> <%= t "button.delete" %>
                     <% end %>
