--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,7 @@
                     <li class="header-login-register">
                       <% if user_signed_in? %>
                         <%= link_to t("profile"), current_user %>
+                        <%= link_to t("My Schedules"), user_schedules_path(current_user)%>
                         <%= link_to t("logout"), destroy_user_session_path, method: :delete %>
                       <% else %>
                         <%= link_to t("login"), new_user_session_path %>
