--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -4,7 +4,7 @@
         <div class="position-relative">
          <img src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1543939668/sharjah-united-arab-emirates-sunset-WTG20191218.jpg?itok=-4H2dY0d" class= "custom-card-image" alt="Resort at Boracay, Philippines">
         </div>
-        <h4 id="thumbnail-label"><strong><%= schedule.name %></strong></h4>
+        <h4 id="thumbnail-label"><strong><%= link_to(schedule.name, services_path) %></strong></h4>
         
         <div class="smaller">
            by <strong><%= schedule.user.username %></strong>
