--- a/app/views/services/_detail.html.erb
+++ b/app/views/services/_detail.html.erb
@@ -63,6 +63,7 @@
                                 <%= service.end_time.strftime("%B %d, %Y") %>
                             <% end %>
                         </h5>
+                        <h2 class="text-left text-blue price-ht">USD <span class="text-yellow"><%= service.price %></span></h2>
                     </div>
                     <div class="col-xs-12 no-padding hotel-slide-pay">
                         <p class="text-blue"><%= t "cards_accepted" %></p>
