--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
                     </li>
                     <li class="header-login-register">
                       <% if user_signed_in? %>
-                        <%= link_to t("profile"), current_user %>
+                        <%= link_to t("Profile"), edit_user_registration_url %>
                         <%= link_to t("My Schedules"), user_schedules_path(current_user)%>
                         <%= link_to t("logout"), destroy_user_session_path, method: :delete %>
                       <% else %>
